2004-03-12  Roland McGrath  <roland@redhat.com>

	* td_thr_tlsbase.c [TLS_DTV_AT_TP && TLS_TP_OFFSET > 0]: Handle this
	case (PowerPC) differently.

2003-11-25  Roland McGrath  <roland@redhat.com>

	* td_symbol_list.c (symbol_list_arr) [HAVE_ASM_GLOBAL_DOT_NAME]:
	Prepend "." to symbol names for functions.

2003-08-18  Daniel Jacobowitz  <drow@mvista.com>

	* td_thr_getfpregs.c (td_thr_getfpregs): Use the main thread if
	the descriptor is uninitialized.
	* td_thr_getgregs.c (td_thr_getgregs): Likewise.

2003-03-15  Roland McGrath  <roland@redhat.com>

	* thread_db.h (td_err_e): Add TD_NOTLS and TD_TLSDEFER.
	(td_thr_tlsbase): Declare it.
	* td_thr_tlsbase.c: New file.
	* Makefile (libthread_db-routines): Add it.
	* Versions (libthread_db: GLIBC_2.3.3): New set, add td_thr_tlsbase.
	* td_thr_tls_get_addr.c (td_thr_tls_get_addr): Use td_thr_tlsbase.

2003-02-27  Roland McGrath  <roland@redhat.com>

	* td_thr_tls_get_addr.c (td_thr_tls_get_addr): Handle TLS_DTV_AT_TP.

	* td_ta_thr_iter.c (handle_descr) [!defined USE_TLS || !TLS_DTV_AT_TP]:
	Conditionalize p_header use on this.

2003-01-29  Roland McGrath  <roland@redhat.com>

	* td_ta_new.c (td_ta_new): Cap the `sizeof_descr' value read from the
	inferior at `sizeof (struct _pthread_descr_struct)', since we use it
	as a length in copies to our own structures.

2003-01-05  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (libthread_db.so-no-z-defs): Define.

2002-09-29  Ulrich Drepper  <drepper@redhat.com>

	* td_thr_tsd.c (td_thr_tsd): Read correct entry from pthread_keys
	array.

2002-09-28  Andreas Jaeger  <aj@suse.de>

	* td_thr_tls_get_addr.c (td_thr_tls_get_addr): Fix reference to dtv.

2002-09-24  Roland McGrath  <roland@redhat.com>

	* td_thr_tls_get_addr.c (td_thr_tls_get_addr): Fetch just the
	individual members we need, not the whole structures.

2002-09-24  Ulrich Drepper  <drepper@redhat.com>

	* td_thr_tls_get_addr.c (td_thr_tls_get_addr): Change second